# fluxdesk

./: .gitignore  FluxDesk_v1.1_Architecture.md  README.md
fluxdesk/: .gitignore  LICENSE  PROGRESS.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
fluxdesk/.github/workflows/: ci.yml  release.yml
fluxdesk/scripts/: build-python.sh  build-release.sh
fluxdesk/server/: alembic.ini  build.spec  fluxdesk-ai.spec  main.py  requirements.txt
fluxdesk/server/alembic/: env.py
fluxdesk/server/core/: function_schemas.py  idle_manager.py  intent_engine.py  ollama_adapter.py  prompt_manager.py  rag_engine.py  rule_engine.py
fluxdesk/server/crud/: __init__.py  embedding.py  note.py  reminder.py  todo.py  window.py
fluxdesk/server/models/: __init__.py  database.py  schemas.py
fluxdesk/server/routers/: chat.py  data.py  health.py  history.py  notes.py  reminders.py  settings.py  todos.py  windows.py
fluxdesk/server/rules/: create_window.yaml  manage_todo.yaml  system.yaml
fluxdesk/server/services/: chat_service.py  (+2 more)
fluxdesk/src/: App.vue
fluxdesk/src-tauri/: Cargo.toml  fluxdesk.desktop  tauri.conf.json
fluxdesk/src-tauri/capabilities/: default.json
fluxdesk/src-tauri/src/: lib.rs  main.rs
fluxdesk/src-tauri/src/api/: handlers.rs  server.rs
fluxdesk/src-tauri/src/commands/: mod.rs  security.rs  settings.rs  shortcut.rs  system.rs  tools.rs  window.rs
fluxdesk/src-tauri/src/security/: keychain.rs  token.rs
fluxdesk/src-tauri/src/sidecar/: manager.rs  mod.rs  token.rs
fluxdesk/src-tauri/src/window_manager/: registry.rs
(+45 files in other folders)
