[package]
name = "fluxdesk"
version = "1.1.0"
description = "AI-Native Cross-Platform Desktop Assistant"
authors = ["FluxDesk Team"]
edition = "2021"

[lib]
name = "fluxdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync"] }
axum = { version = "0.7", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
urlencoding = "2"

[features]
default = []
